Holy grail batman, the camera isn't stupid anymore
Also purple materials brought back? Not going to dig through the history
to find if I should delete these or what.

--- a/Crystal Ray/Assembly-CSharp-vs.csproj
+++ b/Crystal Ray/Assembly-CSharp-vs.csproj
@@ -87,7 +87,7 @@
      <Compile Include="Assets\Scripts\gameVariables.cs" />
      <Compile Include="Assets\Scripts\leftArrow.cs" />
      <Compile Include="Assets\Scripts\mainMenu.cs" />
-     <Compile Include="Assets\Scripts\pathCreation.cs" />
+     <Compile Include="Assets\Scripts\pathCreation_unused.cs" />
      <Compile Include="Assets\Scripts\popupBack.cs" />
      <Compile Include="Assets\Scripts\popupMenu.cs" />
      <Compile Include="Assets\Scripts\restart.cs" />
