Moved a large chunk of gameMain into new script

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
 *metadata/
-*temp/
-*.log
 *.meta
+*.csproj
+*.unityproj
+*.sln
+*.suo
+*.tmp
+*.user
 *.userprefs
 *.log
+*.pidb
+*.booproj
+sysinfo.txt
